css/style.css
/*--------------
    RESET
--------------*/

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*--------------
    TYPOGRAPHY
--------------*/

*{
    font-family: sans-serif;
}

/*.article-desc{
    line-height: 1.5;
} */

.brand{
    font-size: 14px;
}

.article{
    font-size: 16px;
    font-weight: bold;
}

.discount-price{
    font-size: 14px;
    color: red;
    font-weight: bold;
}

.original-price{
    font-size: 14px;
    color: grey;
    font-weight: bold;
    text-decoration: line-through;
}

header .nav ul li a{
    color: white;
    font-weight: bold;
    text-decoration: none;
}

header .nav-icons{
    color: white;
}

.discount-tag-container > *{
    font-size: 12px;
    color: white;
    font-weight: bold;
}
/*--------------
    GENERAL
--------------*/

.container{
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
}

.img-fluid{
    max-width: 100%;
}

/*--------------
    HEADER
--------------*/

header > .container{
    width: 100%;
    min-height: 80px;
    margin-bottom: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header{
    background-color: #FF6900;
}

header .nav ul{
    list-style: none;
    display: flex;
    gap: 30px;
    line-height: 80px;
}


header .logo > img{
    height: 50px;
}

header .nav-icons{
    line-height: 80px;
    display: flex;
    gap: 15px;
}
/*--------------
    MAIN
--------------*/

.row{
    min-height: 400px;
    width: 100%;
    margin-bottom: 50px;
    display: flex;
    gap: 10px;
}

.col{
    width: calc(100% / 3);
    position: relative;
}

.discount-tag-container > *{
    display: inline-block;
    padding: 4px 8px;
    font-size: 12px;
    color: white;
    font-weight: bold;
}

.discount-tag-container{
    width: 100%;
    position: absolute;
    bottom: 100px;
}

.discount-tag{
    background-color: red;
}

.eco-tag{
    background-color: green;
}

.like{
    position: absolute;
    top: 20px;
    right: 0;
    padding: 10px;
    background-color: #fff;
}

.like:hover{
    color: red;
}

.img-fluid{
    position: absolute;
    max-width: 100%;
    top: 0;
    left: 0;
}

.img-hidden{
    max-width: 100%;
}

.img-fluid:hover{
    display: none;
}

/* .col:hover{
    display: none;
} */

/*--------------
    HEADER
--------------*/

footer{
    max-width: 100%;
    min-height: 100px;
    background-color: #1A1A1A;
    line-height: 25px;

}

footer > .container{
    display: flex;
    justify-content: space-between;
}

.container .info-footer ul li a{
    color: #fff;
    font-weight: bold;
    text-decoration: none;
}

.container .info-footer{
    padding-top:  30px;
}

.info-footer ul{
    list-style: none;
    display: flex;
    gap: 15px;
    font-size: 12px;
}

h2{
    color: #fff;
    font-size: 18px;
}

/* .find-us{
    display: flex;
    align-items: center;
}

.find-us h2{
    color: #fff;
    font-size: 14px;
}

.footer-icons{
    font-size: 20px;
    color: #fff;
    margin-rig: 20px;
    display: flex;
    gap: 20px;
    justify-content: flex-end;
} */

.find-us{
    text-align: right;
    margin-top: 20px;
    color: white;
}

.footer-icons i{
    margin-left: 10px;
}
/*--------------
    DEBUG
--------------*/

.debug .container{
    background-color: lightcoral;
}

.debug .row{
    background-color: grey;
}

.debug .col{
    background-color: aqua;
}

